<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="player_stream_proxy"
        android:summary="@string/use_custom_proxy_desc"
        android:title="@string/use_custom_proxy"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:defaultValue=""
        android:key="player_proxy_url"
        android:summary="@string/stream_proxy_url_desc"
        android:title="@string/stream_proxy_url"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:title="@string/following_label"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:defaultValue="60"
        android:entries="@array/followedLiveAutoRefreshEntries"
        android:entryValues="@array/followedLiveAutoRefreshValues"
        android:key="followed_live_auto_refresh_interval"
        android:summary="%s"
        android:title="@string/followed_live_auto_refresh"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="followed_live_refresh_on_return"
        android:summary="@string/followed_live_refresh_on_return_summary"
        android:title="@string/followed_live_refresh_on_return"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:title="@string/network"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="nav_proxy_settings"
        android:title="@string/proxy_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="nav_playback_settings"
        android:title="@string/playback_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:title="@string/account"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="nav_api_token_settings"
        android:title="@string/api_token_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:key="advanced_category"
        android:title="@string/advanced"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="nav_debug_settings"
        android:title="@string/debug_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:title="@string/privacy"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="usage_stats_enabled"
        android:summary="@string/usage_stats_summary"
        android:title="@string/usage_stats_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

</androidx.preference.PreferenceScreen>
