<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="balanced"
        android:entries="@array/playerLatencyProfileEntries"
        android:entryValues="@array/playerLatencyProfileValues"
        android:key="player_latency_profile"
        android:title="@string/player_latency_profile"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:summary="@string/player_latency_profile_summary"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="player_buffer_min"
        android:singleLine="true"
        android:title="@string/min_buffer"
        app:dialogMessage="@string/min_buffer_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="player_buffer_max"
        android:singleLine="true"
        android:title="@string/max_buffer"
        app:dialogMessage="@string/max_buffer_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="player_buffer_playback"
        android:singleLine="true"
        android:title="@string/buffer_for_playback"
        app:dialogMessage="@string/buffer_for_playback_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="player_buffer_rebuffer"
        android:singleLine="true"
        android:title="@string/rebuffer"
        app:dialogMessage="@string/rebuffer_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="player_live_min_speed"
        android:singleLine="true"
        android:title="@string/live_min_speed"
        app:dialogMessage="@string/live_min_speed_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="player_live_max_speed"
        android:singleLine="true"
        android:title="@string/live_max_speed"
        app:dialogMessage="@string/live_max_speed_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="player_live_target_offset"
        android:singleLine="true"
        android:title="@string/live_target_offset"
        app:dialogMessage="@string/live_target_offset_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

</androidx.preference.PreferenceScreen>
