<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/debug_logs_diagnostics"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="debug_diagnostic_file_logging"
            android:summary="@string/diagnostic_file_logging_summary"
            android:title="@string/diagnostic_file_logging"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:defaultValue="error"
            android:entries="@array/diagnosticLogLevelEntries"
            android:entryValues="@array/diagnosticLogLevelValues"
            android:key="debug_diagnostic_file_log_level"
            android:summary="%s"
            android:title="@string/diagnostic_log_level"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="action_share_diagnostic_log"
            android:title="@string/diagnostic_log_share"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="action_test_diagnostic_log"
            android:title="@string/diagnostic_log_test"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="action_clear_diagnostic_log"
            android:title="@string/diagnostic_log_clear"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/debug_logs_chat"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="debug_network_logs"
            android:title="@string/debug_network_logs"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="debug_kick_realtime_chat"
            android:title="@string/debug_kick_realtime_chat"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="debug_kick_clip_chat"
            android:title="@string/debug_kick_clip_chat"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="debug_kick_badge_logs"
            android:title="@string/debug_kick_badge_logs"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="debug_kick_feature_logs"
            android:title="@string/debug_kick_feature_logs"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="debug_kick_chat_ui_logs"
            android:title="@string/debug_kick_chat_ui_logs"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/debug_logs_player"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="debug_player_buffer_logs"
            android:title="@string/debug_player_buffer_logs"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="debug_player_shell_logs"
            android:title="@string/debug_player_shell_logs"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/debug_logs_kick_import"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="debug_kick_follow_import_logs"
            android:title="@string/debug_kick_follow_import_logs"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
